--- a/index.html
+++ b/index.html
@@ -3,126 +3,133 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Maharaja Restaurant - Royal Dining Experience</title>
+<title>Maharaja Restaurant - Pure Veg</title>
 
 <style>
 :root {
-    --primary-color: #8B0000;
-    --secondary-color: #FFD700;
-    --dark-color: #1a1a1a;
-    --light-color: #f4f4f4;
-    --text-color: #333;
-    --white: #ffffff;
+    --primary:#8B0000;
+    --secondary:#FFD700;
+    --dark:#111;
+    --light:#f4f4f4;
+    --white:#fff;
 }
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-}
-
-body{
-    font-family:Arial, sans-serif;
-    line-height:1.6;
-}
-
+*{margin:0;padding:0;box-sizing:border-box;}
+body{font-family:Arial,sans-serif;line-height:1.6;}
 header{
-    position:fixed;
-    top:0;
-    width:100%;
-    background:white;
-    padding:15px;
-    box-shadow:0 2px 10px rgba(0,0,0,0.1);
-    z-index:1000;
+position:fixed;
+top:0;
+width:100%;
+background:white;
+padding:15px;
+box-shadow:0 2px 10px rgba(0,0,0,0.1);
+z-index:1000;
 }
-
 nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    max-width:1200px;
-    margin:auto;
+display:flex;
+justify-content:space-between;
+align-items:center;
+max-width:1200px;
+margin:auto;
 }
-
 .logo{
-    font-size:22px;
-    font-weight:bold;
-    color:var(--primary-color);
+font-size:22px;
+font-weight:bold;
+color:var(--primary);
 }
+nav ul{display:flex;gap:20px;list-style:none;}
+nav a{text-decoration:none;color:black;font-weight:500;}
 
-nav ul{
-    display:flex;
-    list-style:none;
-    gap:20px;
-}
-
-nav a{
-    text-decoration:none;
-    color:black;
-    font-weight:500;
-}
-
-section{
-    padding:100px 20px;
-}
-
+section{padding:100px 20px;}
 .hero{
-    height:100vh;
-    background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
-    url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') center/cover;
-    color:white;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
+height:100vh;
+background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
+url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') center/cover;
+color:white;
+display:flex;
+align-items:center;
+justify-content:center;
+text-align:center;
 }
+.hero h1{font-size:42px;}
 
-.hero h1{
-    font-size:40px;
-}
-
-.container{
-    max-width:1100px;
-    margin:auto;
-}
+.container{max-width:1100px;margin:auto;}
 
 .menu-grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-    gap:20px;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:20px;
+margin-top:30px;
 }
-
 .menu-item{
-    border:1px solid #ddd;
-    border-radius:10px;
-    padding:15px;
+border:1px solid #ddd;
+border-radius:10px;
+padding:15px;
 }
-
 .menu-item img{
-    width:100%;
-    height:180px;
-    object-fit:cover;
-    border-radius:10px;
+width:100%;
+height:180px;
+object-fit:cover;
+border-radius:10px;
+}
+.btn{
+display:inline-block;
+padding:10px 20px;
+background:var(--primary);
+color:white;
+border:none;
+border-radius:5px;
+cursor:pointer;
+margin-top:10px;
 }
 
 .gallery-grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-    gap:15px;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:15px;
+}
+.gallery-grid img{
+width:100%;
+height:200px;
+object-fit:cover;
+border-radius:10px;
 }
 
-.gallery-grid img{
-    width:100%;
-    height:200px;
-    object-fit:cover;
-    border-radius:10px;
+form input,form select{
+width:100%;
+padding:10px;
+margin:10px 0;
+border:1px solid #ccc;
+border-radius:5px;
 }
 
 footer{
-    background:#8B0000;
-    color:white;
-    text-align:center;
-    padding:20px;
+background:var(--primary);
+color:white;
+text-align:center;
+padding:20px;
+}
+
+/* Dark Mode */
+.dark{
+background:#111;
+color:white;
+}
+.dark header{background:#222;}
+.dark nav a{color:white;}
+.dark .menu-item{background:#222;color:white;border:1px solid #444;}
+.dark footer{background:black;}
+
+.whatsapp{
+position:fixed;
+bottom:20px;
+right:20px;
+background:#25D366;
+color:white;
+padding:15px;
+border-radius:50%;
+font-size:20px;
+text-decoration:none;
 }
 </style>
 </head>
@@ -131,13 +138,14 @@ footer{
 
 <header>
 <nav>
-<div class="logo">Maharaja Restaurant</div>
+<div class="logo">Maharaja Restaurant (Pure Veg)</div>
 <ul>
 <li><a href="#home">Home</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#menu">Menu</a></li>
-<li><a href="#gallery">Gallery</a></li>
+<li><a href="#booking">Booking</a></li>
 <li><a href="#contact">Contact</a></li>
+<li><a href="#" onclick="toggleDark()">🌙</a></li>
 </ul>
 </nav>
 </header>
@@ -145,67 +153,93 @@ footer{
 <section class="hero" id="home">
 <div>
 <h1>Welcome to Maharaja Restaurant</h1>
-<p>Royal Taste | Premium Experience</p>
+<p>Pure Veg | Royal Taste | Premium Experience</p>
 </div>
 </section>
 
 <section id="about">
 <div class="container">
 <h2>About Us</h2>
-<p>Maharaja Restaurant offers authentic Indian dishes with royal hospitality and premium dining experience.</p>
+<p>Maharaja Restaurant is a Pure Veg restaurant located at Awasthi Market, Near Bilgram Chungi, Hardoi. We serve delicious vegetarian dishes with royal hospitality.</p>
 </div>
 </section>
 
 <section id="menu">
 <div class="container">
-<h2>Our Special Menu</h2>
+<h2>Our Veg Special Menu</h2>
 <div class="menu-grid">
 
 <div class="menu-item">
 <img src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d">
 <h3>Paneer Butter Masala</h3>
 <p>₹250</p>
-</div>
-
-<div class="menu-item">
-<img src="https://images.unsplash.com/photo-1601050690597-df0568f70950">
-<h3>Chicken Biryani</h3>
-<p>₹300</p>
+<button class="btn">Order Now</button>
 </div>
 
 <div class="menu-item">
 <img src="https://images.unsplash.com/photo-1625944230961-8a601a5d99c2">
 <h3>Butter Naan</h3>
 <p>₹40</p>
+<button class="btn">Order Now</button>
+</div>
+
+<div class="menu-item">
+<img src="https://images.unsplash.com/photo-1603133872878-684f208fb84b">
+<h3>Veg Biryani</h3>
+<p>₹220</p>
+<button class="btn">Order Now</button>
+</div>
+
+<div class="menu-item">
+<img src="https://images.unsplash.com/photo-1589301760014-d929f3979dbc">
+<h3>Mix Veg</h3>
+<p>₹200</p>
+<button class="btn">Order Now</button>
 </div>
 
 </div>
 </div>
 </section>
 
-<section id="gallery">
+<section id="booking">
 <div class="container">
-<h2>Gallery</h2>
-<div class="gallery-grid">
-<img src="https://images.unsplash.com/photo-1555992336-03a23c0f0f9a">
-<img src="https://images.unsplash.com/photo-1543353071-873f17a7a088">
-<img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1">
-</div>
+<h2>Book a Table</h2>
+<form>
+<input type="text" placeholder="Your Name" required>
+<input type="tel" placeholder="Phone Number" required>
+<select required>
+<option value="">Select Persons</option>
+<option>2 Persons</option>
+<option>4 Persons</option>
+<option>6 Persons</option>
+</select>
+<input type="date" required>
+<input type="time" required>
+<button class="btn">Book Now</button>
+</form>
 </div>
 </section>
 
 <section id="contact">
 <div class="container">
 <h2>Contact Us</h2>
-<p>📍 Your City, India</p>
-<p>📞 9876543210</p>
-<p>⏰ 10:00 AM – 11:00 PM</p>
+<p><strong>Address:</strong> Awasthi Market, Near Bilgram Chungi, Hardoi</p>
+<p><strong>Phone:</strong> 9876543210</p>
+<p><strong>Opening Time:</strong> 10:00 AM – 11:00 PM</p>
 </div>
 </section>
 
 <footer>
-© 2026 Maharaja Restaurant | All Rights Reserved
+© 2026 Maharaja Restaurant | Pure Veg | All Rights Reserved
 </footer>
+
+<a href="https://wa.me/919876543210" class="whatsapp">💬</a>
+
+<script>
+function toggleDark(){
+document.body.classList.toggle("dark");
+}
+</script>
 
 </body>
 </html>
