--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Maharaja Restaurant - Pure Veg</title>
+<title>Maharaja Restaurant | Pure Veg | Hardoi</title>
 
 <style>
-:root {
-    --primary:#8B0000;
-    --secondary:#FFD700;
-    --dark:#111;
-    --light:#f4f4f4;
-    --white:#fff;
+:root{
+--primary:#8B0000;
+--secondary:#FFD700;
+--dark:#111;
+--white:#fff;
 }
 
-*{margin:0;padding:0;box-sizing:border-box;}
-body{font-family:Arial,sans-serif;line-height:1.6;}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial;}
+
+body{background:#fff;color:#333;}
+
 header{
 position:fixed;
 top:0;
 width:100%;
-background:white;
+background:#fff;
 padding:15px;
 box-shadow:0 2px 10px rgba(0,0,0,0.1);
 z-index:1000;
 }
+
 nav{
 display:flex;
 justify-content:space-between;
@@ -32,93 +34,85 @@ align-items:center;
 max-width:1200px;
 margin:auto;
 }
-.logo{
-font-size:22px;
-font-weight:bold;
-color:var(--primary);
-}
+
+.logo{font-size:22px;font-weight:bold;color:var(--primary);}
+
 nav ul{display:flex;gap:20px;list-style:none;}
-nav a{text-decoration:none;color:black;font-weight:500;}
+nav a{text-decoration:none;color:#000;font-weight:500;}
 
 section{padding:100px 20px;}
+.container{max-width:1100px;margin:auto;}
+
 .hero{
 height:100vh;
 background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
 url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4') center/cover;
-color:white;
+color:#fff;
 display:flex;
 align-items:center;
 justify-content:center;
 text-align:center;
 }
-.hero h1{font-size:42px;}
-
-.container{max-width:1100px;margin:auto;}
 
 .menu-grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
 gap:20px;
-margin-top:30px;
 }
+
 .menu-item{
 border:1px solid #ddd;
-border-radius:10px;
 padding:15px;
+border-radius:10px;
 }
+
 .menu-item img{
 width:100%;
 height:180px;
 object-fit:cover;
 border-radius:10px;
 }
-.btn{
-display:inline-block;
-padding:10px 20px;
+
+button{
+padding:8px 15px;
 background:var(--primary);
-color:white;
+color:#fff;
 border:none;
 border-radius:5px;
 cursor:pointer;
-margin-top:10px;
+margin-top:5px;
 }
 
-.gallery-grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:15px;
-}
-.gallery-grid img{
-width:100%;
-height:200px;
-object-fit:cover;
+.cart{
+position:fixed;
+right:10px;
+top:100px;
+width:280px;
+background:#fff;
+border:1px solid #ddd;
+padding:15px;
 border-radius:10px;
+max-height:400px;
+overflow:auto;
+box-shadow:0 5px 15px rgba(0,0,0,0.1);
 }
 
-form input,form select{
-width:100%;
-padding:10px;
-margin:10px 0;
-border:1px solid #ccc;
-border-radius:5px;
+.dark{
+background:#111;
+color:#fff;
 }
+
+.dark header{background:#222;}
+.dark nav a{color:#fff;}
+.dark .menu-item{background:#222;border:1px solid #444;}
+.dark .cart{background:#222;color:#fff;}
 
 footer{
 background:var(--primary);
-color:white;
+color:#fff;
 text-align:center;
 padding:20px;
 }
-
-/* Dark Mode */
-.dark{
-background:#111;
-color:white;
-}
-.dark header{background:#222;}
-.dark nav a{color:white;}
-.dark .menu-item{background:#222;color:white;border:1px solid #444;}
-.dark footer{background:black;}
 
 .whatsapp{
 position:fixed;
@@ -141,9 +135,7 @@ text-decoration:none;
 <div class="logo">Maharaja Restaurant (Pure Veg)</div>
 <ul>
 <li><a href="#home">Home</a></li>
-<li><a href="#about">About</a></li>
 <li><a href="#menu">Menu</a></li>
-<li><a href="#booking">Booking</a></li>
 <li><a href="#contact">Contact</a></li>
 <li><a href="#" onclick="toggleDark()">🌙</a></li>
 </ul>
@@ -153,91 +145,107 @@ text-decoration:none;
 <section class="hero" id="home">
 <div>
 <h1>Welcome to Maharaja Restaurant</h1>
-<p>Pure Veg | Royal Taste | Premium Experience</p>
-</div>
-</section>
-
-<section id="about">
-<div class="container">
-<h2>About Us</h2>
-<p>Maharaja Restaurant is a Pure Veg restaurant located at Awasthi Market, Near Bilgram Chungi, Hardoi. We serve delicious vegetarian dishes with royal hospitality.</p>
+<p>Awasthi Market, Near Bilgram Chungi, Hardoi</p>
 </div>
 </section>
 
 <section id="menu">
 <div class="container">
-<h2>Our Veg Special Menu</h2>
+<h2>Our Pure Veg Menu</h2>
 <div class="menu-grid">
 
 <div class="menu-item">
 <img src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d">
 <h3>Paneer Butter Masala</h3>
 <p>₹250</p>
-<button class="btn">Order Now</button>
-</div>
-
-<div class="menu-item">
-<img src="https://images.unsplash.com/photo-1625944230961-8a601a5d99c2">
-<h3>Butter Naan</h3>
-<p>₹40</p>
-<button class="btn">Order Now</button>
+<button onclick="addToCart('Paneer Butter Masala',250)">Add</button>
 </div>
 
 <div class="menu-item">
 <img src="https://images.unsplash.com/photo-1603133872878-684f208fb84b">
 <h3>Veg Biryani</h3>
 <p>₹220</p>
-<button class="btn">Order Now</button>
+<button onclick="addToCart('Veg Biryani',220)">Add</button>
 </div>
 
 <div class="menu-item">
-<img src="https://images.unsplash.com/photo-1589301760014-d929f3979dbc">
-<h3>Mix Veg</h3>
-<p>₹200</p>
-<button class="btn">Order Now</button>
+<img src="https://images.unsplash.com/photo-1625944230961-8a601a5d99c2">
+<h3>Butter Naan</h3>
+<p>₹40</p>
+<button onclick="addToCart('Butter Naan',40)">Add</button>
 </div>
 
 </div>
 </div>
 </section>
 
-<section id="booking">
-<div class="container">
-<h2>Book a Table</h2>
-<form>
-<input type="text" placeholder="Your Name" required>
-<input type="tel" placeholder="Phone Number" required>
-<select required>
-<option value="">Select Persons</option>
-<option>2 Persons</option>
-<option>4 Persons</option>
-<option>6 Persons</option>
-</select>
-<input type="date" required>
-<input type="time" required>
-<button class="btn">Book Now</button>
-</form>
+<div class="cart">
+<h3>Your Cart</h3>
+<ul id="cartItems"></ul>
+<p>Subtotal: ₹<span id="subtotal">0</span></p>
+<p>GST (5%): ₹<span id="gst">0</span></p>
+<h4>Total: ₹<span id="total">0</span></h4>
+<button onclick="sendWhatsApp()">Order via WhatsApp</button>
 </div>
-</section>
 
 <section id="contact">
 <div class="container">
-<h2>Contact Us</h2>
+<h2>Contact</h2>
 <p><strong>Address:</strong> Awasthi Market, Near Bilgram Chungi, Hardoi</p>
-<p><strong>Phone:</strong> 9876543210</p>
 <p><strong>Opening Time:</strong> 10:00 AM – 11:00 PM</p>
+<iframe 
+src="https://maps.google.com/maps?q=Hardoi&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+width="100%" height="250" style="border:0;margin-top:20px;">
+</iframe>
 </div>
 </section>
 
 <footer>
-© 2026 Maharaja Restaurant | Pure Veg | All Rights Reserved
+© 2026 Maharaja Restaurant | Pure Veg | Hardoi
 </footer>
 
-<a href="https://wa.me/919876543210" class="whatsapp">💬</a>
+<a href="#" class="whatsapp">💬</a>
 
 <script>
+let cart=[];
+function addToCart(name,price){
+cart.push({name,price});
+renderCart();
+}
+
+function renderCart(){
+let list=document.getElementById("cartItems");
+list.innerHTML="";
+let subtotal=0;
+cart.forEach(item=>{
+subtotal+=item.price;
+let li=document.createElement("li");
+li.textContent=item.name+" - ₹"+item.price;
+list.appendChild(li);
+});
+let gst=subtotal*0.05;
+let total=subtotal+gst;
+document.getElementById("subtotal").innerText=subtotal;
+document.getElementById("gst").innerText=gst.toFixed(0);
+document.getElementById("total").innerText=total.toFixed(0);
+}
+
+function sendWhatsApp(){
+let message="Hello Maharaja Restaurant,%0AOrder Details:%0A";
+cart.forEach(item=>{
+message+=item.name+" - ₹"+item.price+"%0A";
+});
+message+="Total: ₹"+document.getElementById("total").innerText;
+window.open("https://wa.me/91YOURNUMBER?text="+message);
+}
+
 function toggleDark(){
 document.body.classList.toggle("dark");
+localStorage.setItem("theme",document.body.classList.contains("dark"));
+}
+
+if(localStorage.getItem("theme")==="true"){
+document.body.classList.add("dark");
 }
 </script>
 
