--- a/index.html
+++ b/index.html
@@ -3,251 +3,260 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Maharaja Restaurant | Pure Veg | Hardoi</title>
+
+<meta name="description" content="Maharaja Restaurant - Pure Veg Restaurant in Hardoi. Fresh, hygienic and delicious vegetarian food.">
+<meta name="keywords" content="Maharaja Restaurant, Pure Veg, Hardoi Restaurant, Vegetarian Food">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
 :root{
-    --primary:#8b0000;
-    --secondary:#ffd700;
-    --dark:#222;
-    --light:#f7f7f7;
-    --white:#fff;
+--primary:#8b0000;
+--secondary:#ffd700;
+--dark:#1a1a1a;
+--light:#f8f8f8;
+--white:#fff;
 }
 
-*{margin:0;padding:0;box-sizing:border-box;}
+*{margin:0;padding:0;box-sizing:border-box}
+body{font-family:Arial,Helvetica,sans-serif;background:#fff;color:#333}
+a{text-decoration:none;color:inherit}
+.container{max-width:1200px;margin:auto;padding:0 20px}
 
-body{
-    font-family: Arial, sans-serif;
-    line-height:1.6;
-    background:#fff;
-    color:#333;
-}
-
-/* ===== HEADER ===== */
+/* HEADER */
 header{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    background:#fff;
-    box-shadow:0 2px 10px rgba(0,0,0,.1);
-    z-index:1000;
+position:fixed;
+top:0;left:0;width:100%;
+background:#fff;
+box-shadow:0 2px 10px rgba(0,0,0,.1);
+z-index:1000;
 }
-.nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:15px 20px;
+.navbar{
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:15px 0;
 }
 .logo{
-    font-size:22px;
-    font-weight:bold;
-    color:var(--primary);
+font-size:24px;
+font-weight:bold;
+color:var(--primary)
 }
-.menu{
-    display:flex;
-    gap:20px;
+.logo span{color:var(--secondary)}
+.nav-menu{
+display:flex;
+gap:25px;
 }
-.menu a{
-    text-decoration:none;
-    color:#333;
-    font-weight:500;
-}
-.menu a:hover{color:var(--primary);}
+.nav-link{font-weight:600}
+.hamburger{display:none;font-size:22px;cursor:pointer}
 
-.hamburger{
-    display:none;
-    font-size:22px;
-    cursor:pointer;
-}
-
-/* ===== HERO ===== */
+/* HERO */
 .hero{
-    margin-top:70px;
-    min-height:90vh;
-    background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.7)),
-    url("https://images.unsplash.com/photo-1517248135467-4c7edcad34c4") center/cover;
-    color:#fff;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    padding:20px;
+margin-top:80px;
+min-height:80vh;
+background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+url("https://images.unsplash.com/photo-1600891964599-f61ba0e24092") center/cover;
+display:flex;
+align-items:center;
+justify-content:center;
+text-align:center;
+color:#fff;
+padding:40px 20px;
 }
-.hero h1{
-    font-size:36px;
-    margin-bottom:15px;
-}
-.hero p{
-    font-size:18px;
-    margin-bottom:25px;
-}
-.hero span{
-    background:var(--secondary);
-    color:#000;
-    padding:6px 14px;
-    border-radius:20px;
-    font-weight:bold;
+.hero h1{font-size:42px;margin-bottom:15px}
+.hero p{font-size:18px;margin-bottom:25px}
+.badge{
+display:inline-block;
+background:var(--secondary);
+color:#000;
+padding:8px 18px;
+border-radius:20px;
+font-weight:bold;
+margin-bottom:15px;
 }
 
-/* ===== SECTION ===== */
-section{
-    padding:60px 20px;
+/* SECTIONS */
+.section{padding:70px 0}
+.section h2{
+text-align:center;
+color:var(--primary);
+margin-bottom:15px;
+font-size:32px;
 }
-.title{
-    text-align:center;
-    margin-bottom:40px;
-}
-.title h2{
-    color:var(--primary);
-    font-size:30px;
+.section p{text-align:center;color:#666}
+
+/* ABOUT */
+.about-box{
+max-width:900px;
+margin:auto;
+font-size:17px;
+line-height:1.7;
 }
 
-/* ===== ABOUT ===== */
-.about{
-    max-width:1000px;
-    margin:auto;
-    text-align:center;
-}
-.about p{
-    font-size:16px;
-    color:#555;
-}
-
-/* ===== MENU ===== */
+/* MENU */
 .menu-grid{
-    max-width:1000px;
-    margin:auto;
-    display:grid;
-    grid-template-columns:repeat(3,1fr);
-    gap:20px;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+gap:20px;
+margin-top:40px;
 }
-.item{
-    background:var(--light);
-    padding:20px;
-    border-radius:10px;
-    text-align:center;
+.menu-item{
+background:var(--light);
+padding:25px;
+border-radius:12px;
+text-align:center;
+box-shadow:0 5px 15px rgba(0,0,0,.08);
 }
-.item h4{
-    color:var(--primary);
-    margin-bottom:5px;
+.menu-item i{
+font-size:35px;
+color:var(--primary);
+margin-bottom:10px;
 }
 
-/* ===== CONTACT ===== */
-.contact{
-    background:var(--light);
-}
+/* CONTACT */
 .contact-box{
-    max-width:800px;
-    margin:auto;
-    text-align:center;
+max-width:700px;
+margin:auto;
+background:var(--light);
+padding:35px;
+border-radius:15px;
+text-align:center;
 }
 .contact-box p{
-    margin:10px 0;
+font-size:16px;
+margin:10px 0;
 }
 
-/* ===== FOOTER ===== */
+/* FOOTER */
 footer{
-    background:#111;
-    color:#fff;
-    text-align:center;
-    padding:15px;
+background:var(--dark);
+color:#fff;
+text-align:center;
+padding:25px;
+font-size:14px;
 }
 
-/* ===== MOBILE ===== */
+/* MOBILE */
 @media(max-width:768px){
-    .menu{
-        position:fixed;
-        top:60px;
-        left:-100%;
-        flex-direction:column;
-        background:#fff;
-        width:100%;
-        padding:20px 0;
-        transition:.3s;
-    }
-    .menu.active{left:0;}
-    .hamburger{display:block;}
-    .menu-grid{grid-template-columns:1fr;}
-    .hero h1{font-size:26px;}
+.nav-menu{
+position:fixed;
+top:70px;
+left:-100%;
+flex-direction:column;
+width:100%;
+background:#fff;
+padding:25px 0;
+transition:.3s;
+}
+.nav-menu.active{left:0}
+.hamburger{display:block}
+.hero h1{font-size:30px}
 }
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header>
-    <div class="nav">
-        <div class="logo">Maharaja Restaurant</div>
-        <div class="hamburger" onclick="toggleMenu()">☰</div>
-        <div class="menu" id="menu">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#menuu">Menu</a>
-            <a href="#contact">Contact</a>
-        </div>
-    </div>
+<div class="container navbar">
+<div class="logo">Maharaja <span>Restaurant</span></div>
+
+<div class="nav-menu">
+<a href="#home" class="nav-link">Home</a>
+<a href="#about" class="nav-link">About</a>
+<a href="#menu" class="nav-link">Menu</a>
+<a href="#contact" class="nav-link">Contact</a>
+</div>
+
+<div class="hamburger"><i class="fas fa-bars"></i></div>
+</div>
 </header>
 
 <!-- HERO -->
 <section class="hero" id="home">
-    <div>
-        <span>100% PURE VEG</span>
-        <h1>Maharaja Restaurant</h1>
-        <p>Swad jo dil jeet le – Best Pure Veg Food in Hardoi</p>
-    </div>
+<div>
+<div class="badge">100% Pure Veg 🌿</div>
+<h1>Welcome to Maharaja Restaurant</h1>
+<p>Shuddh Shakahari • Swadisht Bhojan • Hardoi</p>
+</div>
 </section>
 
 <!-- ABOUT -->
-<section id="about">
-    <div class="title">
-        <h2>About Us</h2>
-    </div>
-    <div class="about">
-        <p>
-        Maharaja Restaurant ek shuddh shakahari (Pure Veg) restaurant hai.
-        Yahan aapko swachh vatavaran, achha swad aur family-friendly mahaul milta hai.
-        </p>
-    </div>
+<section class="section" id="about">
+<div class="container">
+<h2>About Us</h2>
+<div class="about-box">
+<p>
+Maharaja Restaurant Hardoi ka ek vishwasniya **Pure Veg Restaurant** hai.  
+Yahan aapko swachh vatavaran, achhi service aur lajawab shakahari bhojan milta hai.  
+Parivaar aur doston ke saath bhojan ke liye ek perfect jagah.
+</p>
+</div>
+</div>
 </section>
 
 <!-- MENU -->
-<section id="menuu">
-    <div class="title">
-        <h2>Our Special Menu</h2>
-    </div>
-    <div class="menu-grid">
-        <div class="item"><h4>Paneer Butter Masala</h4><p>Pure Veg Special</p></div>
-        <div class="item"><h4>Shahi Paneer</h4><p>Maharaja Special</p></div>
-        <div class="item"><h4>Veg Biryani</h4><p>Fresh & Tasty</p></div>
-        <div class="item"><h4>Masala Dosa</h4><p>South Indian</p></div>
-        <div class="item"><h4>Chole Bhature</h4><p>North Indian</p></div>
-        <div class="item"><h4>Veg Thali</h4><p>Complete Meal</p></div>
-    </div>
+<section class="section" id="menu">
+<div class="container">
+<h2>Our Special Menu</h2>
+
+<div class="menu-grid">
+<div class="menu-item">
+<i class="fas fa-seedling"></i>
+<h3>Paneer Special</h3>
+<p>Fresh & Tasty</p>
+</div>
+
+<div class="menu-item">
+<i class="fas fa-bowl-rice"></i>
+<h3>North Indian</h3>
+<p>Dal, Sabzi, Roti</p>
+</div>
+
+<div class="menu-item">
+<i class="fas fa-pizza-slice"></i>
+<h3>South Indian</h3>
+<p>Dosa, Idli, Vada</p>
+</div>
+
+<div class="menu-item">
+<i class="fas fa-leaf"></i>
+<h3>Pure Veg Thali</h3>
+<p>Complete Meal</p>
+</div>
+</div>
+
+</div>
 </section>
 
 <!-- CONTACT -->
-<section class="contact" id="contact">
-    <div class="title">
-        <h2>Contact Us</h2>
-    </div>
-    <div class="contact-box">
-        <p><b>Address:</b> Awasthi Market, Near Bilgram Chungi, Hardoi</p>
-        <p><b>Type:</b> Only Pure Veg Restaurant</p>
-        <p><b>Phone:</b> (Yahan apna number add karein)</p>
-    </div>
+<section class="section" id="contact">
+<div class="container">
+<h2>Contact Us</h2>
+
+<div class="contact-box">
+<p><strong>📍 Address:</strong><br>
+Awasthi Market, Near Bilgram Chungi,<br>
+1
+</p>
+
+<p><strong>🌿 Type:</strong> 100% Pure Vegetarian</p>
+<p><strong>🕒 Timing:</strong> 10:00 AM – 10:00 PM</p>
+</div>
+
+</div>
 </section>
 
-<!-- FOOTER -->
 <footer>
-    © 2026 Maharaja Restaurant | All Rights Reserved
+© 2026 Maharaja Restaurant | Pure Veg | All Rights Reserved
 </footer>
 
 <script>
-function toggleMenu(){
-    document.getElementById("menu").classList.toggle("active");
-}
+const ham=document.querySelector(".hamburger");
+const menu=document.querySelector(".nav-menu");
+ham.onclick=()=>menu.classList.toggle("active");
 </script>
 
 </body>
